--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.8.6) stable; urgency=low
+
+  * Updated to version 0.8.6
+
+ -- José Iván López González <jlopez@suse.com>  Wed, 23 Oct 2019 13:00:36 +0000
+
 snapper (0.8.5) stable; urgency=low
 
   * allow trailing comments in configuration files (bsc#1005342)
