--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.10.4) stable; urgency=low
+
+  * Updated to version 0.10.4
+
+ -- Arvin Schnell <aschnell@suse.com>  Wed, 16 Dec 2022 08:18:46 +0000
+
 snapper (0.10.3) stable; urgency=low
 
   * Updated to version 0.10.3
