--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 10:03+0200\n"
+"POT-Creation-Date: 2023-04-25 09:55+0200\n"
 "PO-Revision-Date: 2023-04-19 17:14+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,10 +35,8 @@ msgid ""
 "\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 "\t--columns <columnes>\t\tColumnes per mostrar separades per comes.\n"
-"\t\t\t\t\tColumnes possibles: configuració, subvolum, número, per defecte, "
-"activa,\n"
-"\t\t\t\t\ttipus, data, usuari, espai usat, neteja, descripció, dades "
-"d'usuari,\n"
+"\t\t\t\t\tColumnes possibles: configuració, subvolum, número, per defecte, activa,\n"
+"\t\t\t\t\ttipus, data, usuari, espai usat, neteja, descripció, dades d'usuari,\n"
 "\t\t\t\t\tnúmero pre, número post, postdata, només de lectura."
 
 msgid ""
@@ -60,9 +57,11 @@ msgstr "\t--config, -c <name>\t\tEstableix el nom de config a usar."
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tEstableix el format de sortida CSV."
 
-msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgid "\t--debug\t\t\t\tTurn on debugging."
 msgstr ""
-"\t--default\t\t\tEstableix la instantània com a instantània predeterminada."
+
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgstr "\t--default\t\t\tEstableix la instantània com a instantània predeterminada."
 
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr "\t--description, -d <description>\tDescripció per a la instantània."
@@ -137,8 +136,7 @@ msgid "\t--read-write\t\t\tCreate read-write snapshot."
 msgstr "\t--read-write\t\t\tCrea una instantània de lectura i d'escriptura."
 
 msgid "\t--read-write\t\t\tSet snapshot read-write."
-msgstr ""
-"\t--read-write\t\t\tEstableix la instantània com a lectura i escriptura."
+msgstr "\t--read-write\t\t\tEstableix la instantània com a lectura i escriptura."
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
 msgstr "\t--root, -r <path>\t\tOpera a l'arrel de destinació (només funciona sense DBus)."
