--- a/po/ja.po
+++ b/po/ja.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 10:03+0200\n"
+"POT-Creation-Date: 2023-04-25 09:55+0200\n"
 "PO-Revision-Date: 2023-04-19 11:14+0000\n"
 "Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
-"Language-Team: Japanese <https://l10n.opensuse.org/projects/snapper/master/"
-"ja/>\n"
+"Language-Team: Japanese <https://l10n.opensuse.org/projects/snapper/master/ja/>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,6 +62,9 @@ msgstr "\t--config, -c <名前>\t\t使用する設定ファイル名を指定す
 
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tCSV 形式の出力を行なう。"
+
+msgid "\t--debug\t\t\t\tTurn on debugging."
+msgstr ""
 
 msgid "\t--default\t\t\tSet snapshot as default snapshot."
 msgstr "\t--default\t\t\t既定のスナップショットとして設定する。"
