--- a/po/nl.po
+++ b/po/nl.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 10:03+0200\n"
+"POT-Creation-Date: 2023-04-25 09:55+0200\n"
 "PO-Revision-Date: 2023-04-19 11:14+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>"
-"\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,6 +63,9 @@ msgstr "\t--config, -c <name>\t\tStel naam van te gebruiken configuratie in."
 
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tCSV uitvoerformaat instellen."
+
+msgid "\t--debug\t\t\t\tTurn on debugging."
+msgstr ""
 
 msgid "\t--default\t\t\tSet snapshot as default snapshot."
 msgstr "\t--default\t\t\tMomentopname instellen als standaard momentopname."
