--- a/po/sk.po
+++ b/po/sk.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-19 10:03+0200\n"
+"POT-Creation-Date: 2023-04-25 09:55+0200\n"
 "PO-Revision-Date: 2023-04-19 17:14+0000\n"
 "Last-Translator: Ferdinand Galko <galko.ferdinand@gmail.com>\n"
-"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>"
-"\n"
+"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,6 +60,9 @@ msgstr "\t--config, -c <name>\t\tNastaví názov konfigurácie, ktorá sa použi
 
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tNastaví výstupný formát CSV."
+
+msgid "\t--debug\t\t\t\tTurn on debugging."
+msgstr ""
 
 msgid "\t--default\t\t\tSet snapshot as default snapshot."
 msgstr "\t--default\t\t\tNastaví snímku ako predvolenú snímku."
