--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.10.5) stable; urgency=low
+
+  * Updated to version 0.10.5
+
+ -- Arvin Schnell <aschnell@suse.com>  Mon, 12 Jun 2023 05:14:33 +0000
+
 snapper (0.10.4) stable; urgency=low
 
   * Updated to version 0.10.4
